--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,15 @@ services:
     ports:
       - '5432:5432'
 
+  test-db:
+    image: postgres
+    restart: always
+    ports:
+      - '5433:5432' # 👈 Note the 5433 port (since we are using 5432 for our regular db)
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: pass123
+
   adminer:
     image: adminer:latest
     restart: always
