--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,8 @@ services:
     ports: # expose ports in “host:container” format
       - 27017:27017
     environment: #env variables to pass into the container
-      MONGODB_DATABASE: nest-course
-      MONGODB_DATABASE: root
-      MONGODB_USERNAME: root
-    volumes: 
+      MONGO_INITDB_DATABASE: nest-course
+    volumes:
       - nest_course_data:/data/db
 
   adminer:
@@ -19,5 +17,5 @@ services:
     ports:
       - 8080:8080
 
-volumes: 
+volumes:
   nest_course_data:
